(lang dune 2.0)
(generate_opam_files true)

(name aoc_2019)
(version 0.1.0)

(authors "Shon Feder")
(maintainers "shon.feder@gmail.com")
(homepage "https://github.com/shonfeder/advent-of-code")

(package
 (name aoc_2019)
 (synopsis "TODO")
 (description "TODO")
 (depends
  (dune (>= 2.0.0))

  (ocaml (>= 4.08.0))
  (core (>= v0.13.0))

  (ppx_inline_test (and :with-test (>= v0.13.0)))
  (ppx_deriving (>= 4.4))
))
